--- a/WireGuardCommand/Components/Dialog.razor
+++ b/WireGuardCommand/Components/Dialog.razor
@@ -1,4 +1,5 @@
-﻿@if(isVisible)
+﻿@using WireGuardCommand.Components.Models
+@if(isVisible)
 {
     <div class="container">
         <div class="dialog">
