--- a/WireGuardCommand/Components/Tooltip.razor
+++ b/WireGuardCommand/Components/Tooltip.razor
@@ -6,7 +6,7 @@
     <div class="tooltip-container">
         <div class="tooltip-content">
             <div style="display: flex; gap: 0.5rem; align-items: center">
-                <img src="/images/info.png" width="24" />
+                <img src="/images/info.png" width="24" alt="info"/>
                 <b>@(this.Title)</b>
             </div>
 
