--- a/WireGuardCommand/Pages/Project/ProjectCreate.razor
+++ b/WireGuardCommand/Pages/Project/ProjectCreate.razor
@@ -2,10 +2,6 @@
 
 @using WireGuardCommand.Components;
 
-@{
-    var project = Cache.CurrentProject;
-}
-
 <div class="container">
     <Alert />
 
@@ -29,7 +25,7 @@
 
         <div class="field">
             <label>Template</label>
-            <select @bind="SelectedTemplateName">
+            <select @bind="selectedTemplateName">
                 @for(int i = 0; i < Templates.Count; i++)
                 {
                     var template = Templates[i];
