--- a/WireGuardCommand/Pages/_Layout.cshtml
+++ b/WireGuardCommand/Pages/_Layout.cshtml
@@ -16,6 +16,8 @@
     <script type="text/javascript" src="/lib/site.js"></script>
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+    
+    <title>WireGuard Command</title>
 </head>
 <body>
     @RenderBody()
