--- a/WireGuardCommand/Pages/Project/ProjectView.razor
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor
@@ -52,8 +52,10 @@
                                 <Tooltip Title="Number of Clients"
                                          Content="Sets the number of generated client peers. <br/><br/>Limited by the transit subnet, but can be manually extended later if within transit subnet limits." />
                             </div>
-                            <div style="display: flex; gap: 0.5rem">
+                            <div style="display: flex; flex-direction: column; gap: 0.5rem">
                                 <input @bind="project.ProjectData.NumberOfClients" />
+                                <InputValidator Object="@(project.ProjectData)" Property="NumberOfClients"
+                                                Value="@project.ProjectData.NumberOfClients"></InputValidator>
                             </div>
                         </div>
 
@@ -64,8 +66,10 @@
                                          Content="Sets the transit network that exists between the clients local subnet and the hosts internal set of subnets.<br/><br/>This avoids conflicts and allows easier filtering. It's also what limits the amount of client peers.<br/><br/><b>Example</b><br/>10.0.0.0/24" />
                             </div>
 
-                            <div style="display: flex; gap: 0.5rem">
+                            <div style="display: flex; flex-direction: column; gap: 0.5rem">
                                 <input @bind="project.ProjectData.Subnet" />
+                                <InputValidator Object="@(project.ProjectData)" Property="Subnet"
+                                                Value="@project.ProjectData.Subnet"></InputValidator>
                             </div>
                         </div>
 
@@ -123,8 +127,10 @@
                                 <Tooltip Title="Listen Port"
                                          Content="Sets the WireGuard interface UDP listen port for the server and peers.<br /><br />It must be unique in the case of other existing interfaces." />
                             </div>
-                            <div style="display: flex; gap: 0.5rem">
+                            <div style="display: flex; flex-direction: column; gap: 0.5rem">
                                 <input @bind="project.ProjectData.ListenPort" />
+                                <InputValidator Object="@(project.ProjectData)" Property="ListenPort"
+                                                Value="@project.ProjectData.ListenPort"></InputValidator>
                             </div>
                         </div>
 
