--- a/WireGuardCommand/Pages/Project/ProjectView.razor
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor
@@ -39,6 +39,10 @@
                 <ToolbarMenuDivider></ToolbarMenuDivider>
                 <ToolbarMenuItem Title="Close Project" OnClick="CloseProject"></ToolbarMenuItem>
             </ToolbarMenu>
+            
+            <ToolbarMenu Title="Help">
+                <ToolbarMenuItem Title="About" OnClick="ShowAbout"></ToolbarMenuItem>
+            </ToolbarMenu>
         </Toolbar>
 
         <div class="project-view-body">
