--- a/WireGuardCommand/Components/Toolbar.razor.css
+++ b/WireGuardCommand/Components/Toolbar.razor.css
@@ -1,9 +1,18 @@
 ﻿.toolbar {
+    width: 100%;
+    
     display: flex;
     flex-direction: row;
 
     background-color: rgb(40, 40, 40);
     border-bottom: 1px solid rgb(64, 64, 64);
+}
 
+.toolbar-content {
+    flex: 1;
+    
+    display: flex;
+    flex-direction: row;
+    
     padding: 0.5rem;
 }
