--- a/WireGuardCommand/Pages/Index.razor
+++ b/WireGuardCommand/Pages/Index.razor
@@ -8,51 +8,65 @@
 
     <Alert></Alert>
     <Dialog @ref="dialog"></Dialog>
-
+    
     <div class="project-list" @onclick="() => { selectedProject = null; }">
         <div class="project-list-header">
-            <div style="font-weight: bold; font-size: 1.25rem; padding: 1rem">Projects</div>
-            <div style="flex: 1; display: flex; align-items: center; gap: 1rem; padding: 1rem;">
-                <button class="btn-primary" @onclick="CreateProject">+ New Project</button>
-
-                @if(RuntimeInformation.IsOSPlatform(OSPlatform.Windows))
-                {
-                    <button class="btn-primary" @onclick="BrowseProjects">Open Folder</button>
-                }
-
-                <!-- Divider -->
-                <div style="flex: 1;"></div>
-
-                <button class="btn-primary" @onclick="LoadProjectsAsync">Refresh</button>
+            <Toolbar>
+                <div style="display: flex; align-items: center; font-weight: bold; font-size: 1.25rem; padding: 1rem">Projects</div>
                 
-                <div class="btn-settings" @onclick="OpenSettings"></div>
-            </div>
+                <ToolbarDivider></ToolbarDivider>
+                
+                <div style="flex: 1; display: flex; align-items: center; gap: 1rem; padding: 1rem;">
+                    <button class="btn-primary" @onclick="CreateProject">+ New Project</button>
+                    
+                    <div style="flex: 1"></div>
+
+                    @if (RuntimeInformation.IsOSPlatform(OSPlatform.Windows))
+                    {
+                    <button class="btn-primary" @onclick="BrowseProjects">Open Folder</button>
+                    }
+
+                    <button class="btn-primary" @onclick="LoadProjectsAsync">Refresh</button>
+
+                    <div class="btn-settings" @onclick="OpenSettings"></div>
+                </div>
+            </Toolbar>
         </div>
 
-        @foreach (var project in projects)
+        @if (loaded)
         {
-            <button class="project-card @(project == selectedProject ? "selected" : "")" @onclick="() => SelectProject(project)" @onclick:stopPropagation="true">
-                <div style="display: flex; align-items: center; gap: 0.5rem; font-weight: bold;">
-                    <div>@project.Name</div>
-                    @if (project.IsCorrupted)
-                    {
-                        <img src="/images/warning.png" width="20" alt="warning"/>
-                    }
-                    else if (project.IsEncrypted)
-                    {
-                        <img src="/images/lock.png" width="20" alt="encrypted"/>
-                    }
-                </div>
+            @foreach (var project in projects)
+            {
+                <button class="project-card @(project == selectedProject ? "selected" : "")" @onclick="() => SelectProject(project)" @onclick:stopPropagation="true">
+                    <div style="display: flex; align-items: center; gap: 0.5rem; font-weight: bold;">
+                        <div>@project.Name</div>
+                        @if (project.IsCorrupted)
+                        {
+                            <img src="/images/warning.png" width="20" alt="warning"/>
+                        }
+                        else if (project.IsEncrypted)
+                        {
+                            <img src="/images/lock.png" width="20" alt="encrypted"/>
+                        }
+                    </div>
 
-                @if(!string.IsNullOrWhiteSpace(project.Path))
-                {
-                    <div>@Path.GetFullPath(project.Path)</div>
-                }
-                else
-                {
-                    <div style="color: red">No path found.</div>
-                }
-            </button>
+                    @if (!string.IsNullOrWhiteSpace(project.Path))
+                    {
+                        <div>@Path.GetFullPath(project.Path)</div>
+                    }
+                    else
+                    {
+                        <div style="color: red">No path found.</div>
+                    }
+                </button>
+            }
+        }
+        else
+        {
+            <div style="flex: 1; display: flex; align-items: center; justify-content: center">
+                <img src="/images/spinner.gif" width="32" height="32" alt="spinner"/>
+                Loading..
+            </div>
         }
 
         @if(projects.Count < 1 && loaded)
@@ -63,7 +77,7 @@
         }
     </div>
 
-    @if (selectedProject is not null)
+    @if (selectedProject is not null && loaded)
     {
         <div class="project-info">
             <div class="project-info-body">
@@ -96,5 +110,5 @@
                 </div>
             </div>
         </div>
-    }
+    }   
 </div>
