Added support for rendering components inside dialogs & added about dialog.

--- a/WireGuardCommand/Components/Dialog.razor
+++ b/WireGuardCommand/Components/Dialog.razor
@@ -3,8 +3,15 @@
 {
     <div class="container">
         <div class="dialog">
-            <b>@this.Title</b>
-            <div>@((MarkupString)this.Content)</div>
+            <div class="dialog-header">
+                <div class="dialog-title">@this.Title</div>
+                <div class="dialog-close" @onclick="Hide">x</div>
+            </div>
+
+            @if (!string.IsNullOrWhiteSpace(this.Content))
+            {
+                <div>@((MarkupString)this.Content)</div>
+            }
 
             @if (this.Type == DialogType.Ok)
             {
@@ -16,6 +23,10 @@
                     <button class="btn-unsafe" style="flex: 3" @onclick="OnClickYesAsync">Yes</button>
                     <button class="btn-primary" style="flex: 7" @onclick="OnClickNo">No</button>
                 </div>
+            }
+            else if (this.Type == DialogType.Component)
+            {
+                @componentFragment
             }
         </div>
     </div>
