--- a/WireGuardCommand/Pages/Index.razor.css
+++ b/WireGuardCommand/Pages/Index.razor.css
@@ -3,6 +3,12 @@
     
     display: flex;
     flex-direction: row;
+
+    opacity: 0;
+
+    animation-name: fade-in;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
 }
 
 .project-list {
