Added fade-in animation to project load and settings panes.

--- a/WireGuardCommand/Pages/Project/ProjectSettings.razor.css
+++ b/WireGuardCommand/Pages/Project/ProjectSettings.razor.css
@@ -3,6 +3,12 @@
 
     display: flex;
     flex-direction: column;
+
+    opacity: 0;
+
+    animation-name: fade-in;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
 }
 
 .body {
