--- a/WireGuardCommand/Pages/Project/ProjectLoad.razor.css
+++ b/WireGuardCommand/Pages/Project/ProjectLoad.razor.css
@@ -5,4 +5,10 @@
 
     align-items: center;
     justify-content: center;
+
+    opacity: 0;
+
+    animation-name: fade-in;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
 }
