--- a/WireGuardCommand/Pages/Project/ProjectSettings.razor
+++ b/WireGuardCommand/Pages/Project/ProjectSettings.razor
@@ -5,12 +5,19 @@
     <Alert></Alert>
     <Dialog @ref="dialog"></Dialog>
 
-    <div class="body">
-        <div style="display: flex; flex-direction: row; gap: 0.5rem; align-items: center;">
+    <Toolbar>
+        <div style="display: flex; flex-direction: column; justify-content: center; padding: 0.5rem">
             <button class="btn-primary" @onclick="GoBack">Back</button>
-            <div style="font-size: 1.25rem; font-weight: bold">Configuration</div>
         </div>
 
+        <ToolbarDivider></ToolbarDivider>
+
+        <div style="display: flex; flex-direction: column; justify-content: center; font-weight:  bold; font-size: 1.25rem; padding:  0.5rem">
+            Configuration
+        </div>
+    </Toolbar>
+    
+    <div class="body">
         <div class="config">
             <div style="display: flex; flex-direction: column">
                 <label>Projects Path</label>
@@ -35,7 +42,7 @@
             <div>
                 <label>Templates</label>
 
-                <div style="border: 1px solid #505050; padding: 0.5rem; background-color: #151515">
+                <div style="border: 1px solid #505050; border-radius: 5px; padding: 0.5rem; background-color: #151515">
                     @if (templates.Count == 0)
                     {
                         <span>No templates</span>
