Added subnet CIDR to evaluator.

--- a/WireGuardCommand/Components/Dialogs/EvalVariables.razor
+++ b/WireGuardCommand/Components/Dialogs/EvalVariables.razor
@@ -6,11 +6,12 @@
     <ul>
         <li>{interface.name} - The name of the interface.</li>
         <li>{allowed.ip} - The allowed IP that can connect to the peers.</li>
+        <li>{subnet.cidr} - The CIDR for the subnet.</li>
     </ul>
     <b>Server</b>
     <ul>
         <li>{server.endpoint} - The server endpoint.</li>
-        <li>{server.address} - The address for the se   rver.</li>
+        <li>{server.address} - The address for the server.</li>
         <li>{server.port} - The port the server is listening on.</li>
         <li>{server.privatekey} - The servers private key.</li>
         <li>{server.publickey} - The servers public key.</li>
