--- a/WireGuardCommand/Pages/Project/ProjectLoad.razor
+++ b/WireGuardCommand/Pages/Project/ProjectLoad.razor
@@ -16,11 +16,11 @@
             {
                 <div>This project is encrypted and requires a passphrase to access.</div>
 
-                <input type="password" @bind-value="project.Passphrase" />
+                <input type="password" @onchange="OnPasswordChanged" @onkeydown="OnKeyUpAsync" autofocus />
 
                 <div style="display: flex; gap: 0.5rem;">
-                    <button style="flex: 1" class="btn-unsafe" @onclick="GoBack">Back</button>
                     <button style="flex: 1" class="btn-primary" @onclick="DecryptProjectAsync">Decrypt</button>
+                    <button style="flex: 1" class="btn-unsafe" @onclick="GoBack">Back</button>
                 </div>
             }
             else
